--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #fff;
+    background: set-text-color($primary-color);
     @include easeOut;
   }
 
@@ -88,8 +88,9 @@
     .portrait {
       width: 250px;
       height: 250px;
-      // background: url(../img/portrait.jpg);
-      background-color: red;
+      background: url(../img/unnamed.jpg);
+      background-repeat: no-repeat;
+      background-size: 250px 250px;
       border-radius: 50%;
       border: solid 3px $seconday-color;
     }
@@ -116,7 +117,7 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    color: #fff;
+    color: set-text-color($primary-color);
     text-decoration: none;
     @include easeOut;
     &:hover {
