--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -41,6 +41,13 @@
     width: 150px;
     height: 150px;
   }
+
+  .about-info {
+    grid-template-areas:
+      "bioimage"
+      "bio";
+    grid-template-columns: 1fr;
+  }
 }
 
 // Smartphones
