--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 @import "config";
 @import "menu";
-@import "mobile";
 
 // Selects everything in css
 * {
@@ -10,7 +9,17 @@
 body {
   @include background;
   background: $primary-color;
-  color: white;
+  color: set-text-color($primary-color);
+  height: 100%;
+  margin: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.5;
+}
+
+#alternatePages {
+  @include background;
+  background: $primary-color2;
+  // color: set-text-color($primary-color2);
   height: 100%;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -51,7 +60,8 @@ header {
 
 main {
   padding: 4rem;
-  height: 100%;
+  // height: 100%;
+  min-height: calc(100vh - 60px);
 
   .icons {
     margin-top: 1rem;
@@ -72,3 +82,36 @@ main {
     }
   }
 }
+
+.about-info {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas: "bioimage bio bio";
+}
+
+.bio-image {
+  grid-area: bioimage;
+  margin: auto;
+  border-radius: 50%;
+  border: $seconday-color 3px solid;
+  width: 250px;
+  height: 250px;
+}
+.bio {
+  grid-area: bio;
+  font-size: 1.5rem;
+
+  p span {
+    color: $seconday-color;
+  }
+}
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: rgba(lighten($primary-color, 3), 0.5);
+  color: set-text-color($primary-color);
+  height: 60px;
+}
+
+@import "mobile";
